# fcntl-tool

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  flake.nix  integration-test.sh  result
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
src/: cli.rs  fcntl.rs  main.rs
